# oxc-graphql-parser

./: .typos.toml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  graphql.ungram
.circleci/: config.yml
.github/workflows/: autofix.yml  benchmark.yml  ci.yml
benches/: query.rs  supergraph.rs
crates/apollo-parser/: CHANGELOG.md
crates/apollo-parser/src/parser/: mod.rs
crates/oxc-graphql/: Cargo.toml  README.md
crates/oxc-graphql/benches/: query.rs  supergraph.rs
crates/oxc-graphql/examples/: annotate_snippet.rs  ariadne.rs  unused_vars.rs
crates/oxc-graphql/src/: error.rs  limit.rs  tests.rs
crates/oxc-graphql/src/cst/: mod.rs  node_ext.rs
crates/oxc-graphql/src/lexer/: mod.rs
crates/oxc-graphql/src/parser/: mod.rs  syntax_tree.rs
crates/oxc-graphql/src/parser/grammar/: fragment.rs  operation.rs
crates/oxc-graphql/test_data/lexer/err/: 0030_escaped_surrogate.graphql  0030_escaped_surrogate.txt
crates/oxc-graphql/test_data/parser/err/: 0045_ignored_token_spans.graphql  0045_ignored_token_spans.txt
crates/oxc_graphql_parser/: CHANGELOG.md  Cargo.toml  README.md
crates/oxc_graphql_parser/benches/: query.rs  supergraph.rs
crates/oxc_graphql_parser/examples/: annotate_snippet.rs  ariadne.rs  unused_vars.rs
crates/oxc_graphql_parser/src/: ast.rs  error.rs  lib.rs  limit.rs  parser_ast.rs  tests.rs
crates/oxc_graphql_parser/src/cst/: mod.rs  node_ext.rs
crates/oxc_graphql_parser/src/lexer/: cursor.rs  lookup.rs  mod.rs
crates/oxc_graphql_parser/src/parser/: mod.rs  syntax_tree.rs
crates/oxc_graphql_parser/src/parser/grammar/: argument.rs  description.rs  directive.rs  document.rs  enum_.rs  extensions.rs  field.rs  fragment.rs  input.rs  interface.rs  name.rs  object.rs  operation.rs  scalar.rs  schema.rs  selection.rs  ty.rs  union_.rs  value.rs  variable.rs
crates/oxc_graphql_parser/tests/: integration.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lexer.rs  parser.rs  parser_limited.rs
xtask/: Cargo.toml
xtask/src/: cst_src.rs  main.rs
xtask/src/codegen/: gen_syntax_kinds.rs  gen_syntax_nodes.rs  mod.rs
