[package]
name = "oxc-graphql-parser-fuzz"
version = "0.0.1"
publish = false
autotests = false
edition = "2024"
rust-version = "1.96.0"
license = "MIT OR Apache-2.0"

[package.metadata]
cargo-fuzz = true

[dependencies]
env_logger = "0.11.0"
libfuzzer-sys = "0.4"
oxc-graphql-parser = { path = "../crates/oxc_graphql_parser" }

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false

[[bin]]
name = "parser_limited"
path = "fuzz_targets/parser_limited.rs"
test = false
doc = false

[[bin]]
name = "lexer"
path = "fuzz_targets/lexer.rs"
test = false
doc = false
