[package]
name = "oxc-graphql-parser"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxc-project/oxc-graphql-parser"
documentation = "https://docs.rs/oxc-graphql-parser"
description = "Spec-compliant GraphQL parser."
keywords = ["graphql", "parser", "graphql-tooling", "oxc"]
categories = [
    "compilers",
    "development-tools",
    "parser-implementations",
    "parsing",
    "web-programming",
]

[dependencies]
memchr = "2.6.1"
rowan = "0.16.0"
thiserror = "2.0.0"

[dev-dependencies]
annotate-snippets = "0.12.0"
ariadne = "0.6.0"
criterion = "0.8.0"
expect-test = "1.4"
indexmap = "2.0.0"

[[bench]]
name = "query"
path = "benches/query.rs"
harness = false

[[bench]]
name = "supergraph"
path = "benches/supergraph.rs"
harness = false
